--- a/website/blog/templates/blog/base.html
+++ b/website/blog/templates/blog/base.html
@@ -304,7 +304,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4  navbar-trans">
-        <a class="navbar-brand " href="{% url 'index' %}"><img class="goXplor"
+        <a class="navbar-brand " href="{% url 'index' %}"><img class="goXplor" style="border-radius: 40px;"
                 src="/static/home/images/goXplor.png" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -385,16 +385,74 @@
             aria-hidden="true">Top</i></button>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3">
-        <div class="footer-inner">
-            <div><i class="fas fa-globe fa-2x"></i> English (United States)</div>
-            <ul>
-                <li><a class="footer-link" href="{% url 'contact' %}">Contact Us</a></li>
+    <footer class="ftco-footer ftco-section  mt-auto py-3" style="background-color: #333333;
+        color: whitesmoke;">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">About <span><a href="{% url 'index' %}">goXplores</a></span></h2>
+                        <p>goXplores is one of the sikkim tour packages is basically located in gangtok, sikkim.</p>
 
-                <li><a class="footer-link" href="{% url 'about' %}">Terms of use</a></li>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4 ml-md-4">
+                        <h2 class="ftco-heading-2">Information</h2>
+                        <ul class="list-unstyled">
+                            <li><span class="icon-long-arrow-right mr-2"></span>Online Enquiry</li>
 
-            </ul>
-            <div><i class="fas fa-globe fa-2x"></i>&copy; All Rigths Reserved 2020</div>
+                            <li><span class="icon-long-arrow-right mr-2"></span>Booking</li>
+                            <!-- <li><span class="icon-long-arrow-right mr-2"></span>Privacy</li> -->
+                            <!-- <li><span class="icon-long-arrow-right mr-2"></span>Refund Policy</li> -->
+                            <li><span class="icon-long-arrow-right mr-2"></span>Call Us</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">We Deals With</h2>
+                        <ul class="list-unstyled">
+                            <li><span class="icon-long-arrow-right mr-2"></span>Adventure</li>
+                            <li><span class="icon-long-arrow-right mr-2"></span>Hotel and Restaurant</li>
+                            <li><span class="icon-long-arrow-right mr-2"></span>Sight seeing</li>
+                            <li><span class="icon-long-arrow-right mr-2"></span>Nature</li>
+                            <li><span class="icon-long-arrow-right mr-2"></span>Travel</li>
+                            <li><span class="icon-long-arrow-right mr-2"></span>Party</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Have a Questions?</h2>
+                        <div class="block-23 mb-3">
+                            <ul>
+                                <li><span class="icon icon-map-marker"></span><span class="text">New Market, M.G.Marg,
+                                        Gangtok, Sikkim,
+                                        India
+                                    </span></li>
+                                <li><span class="icon icon-phone"></span><span class="text">8972733345</span></li>
+                                <li><span class="icon icon-phone"></span><span class="text">7908111760</span></li>
+                                <li><span class="icon icon-phone"></span><span class="text">8637390902</span></li>
+                                <li><span class="icon icon-envelope"></span><span
+                                        class="text">dextersharma960@gmail.com</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+
+                    <p>
+
+                        Copyright&copy;
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved.
+
+                    </p>
+                </div>
+            </div>
         </div>
     </footer>
 
