--- a/website/home/templates/home/about.html
+++ b/website/home/templates/home/about.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
     <img style="    height: 47vh;
-    width: 100%;" src="/static/home/images/himalaya.jpg" alt="image" />
+    width: 100%;" src="/static/home/images/himalaya1.jpg" alt="image" />
 </div>
 <div class="container">
     <div class="row mt-4">
@@ -12,7 +12,7 @@
 
             <h2>About US</h2>
             <P>
-                Xyz holidays one of the sikkim tour packages is basically located in gangtok, sikkim. We are basically
+                goXplores is one of the sikkim tour packages is basically located in gangtok, sikkim. We are basically
                 focusing on a
                 business on offering a best tour packages in and around sikkim, where people will have plenty of options
                 when it comes
@@ -22,7 +22,7 @@
 
                 We can assure you the best travel packages which would be based on your needs, requirements and above
                 all the budget.
-                Xyz holidays understands that every holiday would be different according to every person with different
+                goXplores understands that every holiday would be different according to every person with different
                 needs. That’s
                 why our team would be dedicated always to provide quality and value every time.
 
@@ -41,30 +41,30 @@
 
         <aside class="col-md-4 blog-sidebar">
             <div class="p-4 mb-3 bg-light rounded">
-                <h4 class="font-italic">Salient features about xyz holidays-</h4>
+                <h4 class="font-italic">What do we assure you about goXplores</h4>
                 <p class="mb-0">
                     <ol>
                         <li>
-                            Xyz holidays is fully approved, registered.
+                            goXplores is Tours and Travel Website which deals with all kind of domestic packages.
                         </li>
                         <li>
-                            Xyz holidays itself is run by local expertise. So it plays an importanrt role here as we can
+                            goXplores itself is run by local expertise. So it plays an importanrt role here as we can
                             recommend you with the
                             memorable and autherntic experience to the holidays.
 
                         </li>
                         <li>
-                            Xyz holidays will be available all the time if you want an individual help, from shopping to
+                            goXplores will be available all the time if you want an individual help, from shopping to
                             clubbing.
 
                         </li>
                         <li>
-                            Xyz holidays also promises you to meet and greet personally so that we can have a strong
+                            goXplores also promises you to meet and greet personally so that we can have a strong
                             connection with the customers.
 
                         </li>
                         <li>
-                            Xyz holidays does not believe on middlemen, so we always pass the savings on to you.
+                            goXplores does not believe on middlemen, so we always pass the savings on to you.
 
                         </li>
                     </ol>
