--- a/website/home/templates/home/index.html
+++ b/website/home/templates/home/index.html
@@ -5,27 +5,27 @@
     <div class="slide active" style="background-image:url('/static/home/images/himalaya.jpg')">
       <div class="container">
         <div class="caption">
-          <h1>1. Some text</h1>
+          <h1>Get Best Deal</h1>
           <p>Lorem ipsum some dummy text.</p>
-          <a href="#">Book Now</a>
+          <a href="{% url 'package' %}">Book Now</a>
         </div>
       </div>
     </div>
     <div class="slide" style="background-image:url('/static/home/images/himalaya1.jpg')">
       <div class="container">
         <div class="caption">
-          <h1>2. Some text</h1>
+          <h1>Opening sale 20% Off</h1>
           <p>Lorem ipsum some dummy text.</p>
-          <a href="#">Book Now</a>
+          <a href="{% url 'package' %}">Book Now</a>
         </div>
       </div>
     </div>
     <div class="slide" style="background-image:url('/static/home/images/slider3.jpg')">
       <div class="container">
         <div class="caption">
-          <h1>3. Some text</h1>
+          <h1>Honeymoon Package 20% Off</h1>
           <p>Lorem ipsum some dummy text.</p>
-          <a href="#">Book Now</a>
+          <a href="{% url 'package' %}">Book Now</a>
         </div>
       </div>
     </div>
@@ -48,10 +48,8 @@
               </div>
               <div class="card-body pb-5 px-4">
                 <h5 class="card-title" style="font-weight: bolder;">East Sikkim</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content. A small
-                  river
-                  named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <a href="{% url 'package' %}" class="btn btn-info">Find Packages</a>
+                <img src="/static/home/images/4.jpg.jpg" class="card-img-top front-img" style="width: 100%;" alt=" ...">
+                <a href="{% url 'package' %}" class="btn btn-info mt-2">Find Packages</a>
               </div>
             </div>
           </div>
@@ -64,10 +62,9 @@
               </div>
               <div class="card-body pb-5 px-4">
                 <h5 class="card-title" style="font-weight: bolder;">West Sikkim</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content. A small
-                  river
-                  named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <a href="{% url 'package' %}" class="btn btn-info">Find Packages</a>
+                <img src="/static/home/images/skywalk.jpg" class="card-img-top front-img" style="width: 100%;" alt="
+                  ...">
+                <a href="{% url 'package' %}" class="btn btn-info mt-2">Find Packages</a>
               </div>
             </div>
           </div>
@@ -80,10 +77,9 @@
               </div>
               <div class="card-body pb-5 px-4">
                 <h5 class="card-title" style="font-weight: bolder;">North Sikkim</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content. A small
-                  river
-                  named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <a href="{% url 'package' %}" class="btn btn-info">Find Packages</a>
+                <img src="/static/home/images/gurudumnga.jpg" class="card-img-top front-img" style="width: 100%;"
+                  alt="...">
+                <a href="{% url 'package' %}" class="btn btn-info mt-2">Find Packages</a>
               </div>
             </div>
           </div>
@@ -96,10 +92,9 @@
               </div>
               <div class="card-body pb-5 px-4">
                 <h5 class="card-title" style="font-weight: bolder;">South Sikkim</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content. A small
-                  river
-                  named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <a href="{% url 'package' %}" class="btn btn-info">Find Packages</a>
+                <img src="/static/home/images/ravangla.jpg" class="card-img-top front-img" style="width: 100%;" alt="
+                  ...">
+                <a href="{% url 'package' %}" class="btn btn-info mt-2">Find Packages</a>
               </div>
             </div>
           </div>
@@ -107,39 +102,16 @@
       </div>
     </div>
 </section>
-<!-- <div class="container">
-  <div class="split left">
-    <div class="centered">
-      <img src="/static/home/images/Travel.jpg" alt="...">
-
-    </div>
-  </div>
-
-
-  <div class="split right">
-    <div class="centered">
-      <span class="subheading">Get in touch with us</span>
-      <h2 class="mb-4">Get Best Travel Deals</h2>
-      <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-        paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-      <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life
-        One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World
-        of Grammar.</p>
-      <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-        paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-      <p><a href="#" class="btn btn-primary py-3 px-4">Book now</a> <a href="{% url 'contact' %}"
-          class="btn btn-white py-3 px-4">Contact us</a></p>
-    </div>
-  </div>
-
-</div> -->
-
 
 <div class="container">
 
 
   {% for destination, range, nSlides in allDest %}
-  <h5 class="my-4" style="font-weight: bolder;">Flash Sale On {{destination.0.category}} -Travel Packages</h5>
+  <div style="background-color:#D6EAF8; color:#2874A6" class="py-2">
+    <h5 class="my-4" style="font-weight: bolder;">Special Discount On {{destination.0.category}} -Travel
+      Packages
+    </h5>
+  </div>
   <div id="demo{{forloop.counter}}" class="col carousel slide my-3" data-ride="carousel">
     <ul class="carousel-indicators">
       <li data-target="#demo{{forloop.counter}}" data-slide-to="0" class="active"></li>
@@ -161,17 +133,19 @@
             <img src="/media/{{i.image}}" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">{{i.name}}</h5>
-
+              {% if i.offer %}
+              <div class="discount">
+                <h6 style="color: rgb(255, 4, 4);">{{ i.DiscountCalc }}% off</h6>
+              </div>
+              {% endif %}
               <p class="card-text">{{i.description}}</p>
               <a href="{% url 'package' %}" class="btn" style="background-color: turquoise;">Buy now</a>
               {% if i.offer %}
-              <span class="origprice"><strike>₹{{ i.originalPrice }}</strike></span>
-              <span class="price">₹{{ i.price }}</span>
-              <div class="discount">
-                <p>{{ i.DiscountCalc }}% off</p>
-              </div>
+              <span class="origprice" style="color:indianred ;"><strike>₹{{ i.originalPrice }}</strike></span>
+              <span class="price" style="color: limegreen;">₹{{ i.price }}</span>
+
               {% else %}
-              <span class="origprice">₹{{ i.originalPrice }}</span>
+              <span class="origprice" style="color: limegreen;">₹{{ i.originalPrice }}</span>
               {% endif %}
             </div>
           </div>
@@ -325,6 +299,10 @@
 
   let timer = setInterval(autoplay, 6000);
 
-
+  {% if thank %}
+  alert('Your inquiry has been submitted, we will get in touch with you soon.')
+  localStorage.clear();
+  document.location = "/package";
+  {% endif %}
 </script>
 {% endblock %}
