--- a/website/home/templates/home/index.html
+++ b/website/home/templates/home/index.html
@@ -5,8 +5,8 @@
     <div class="slide active" style="background-image:url('/static/home/images/himalaya.jpg')">
       <div class="container">
         <div class="caption">
-          <h1>Get Best Deal</h1>
-          <p>Lorem ipsum some dummy text.</p>
+          <h1>Get Best Deal Package</h1>
+          <p></p>
           <a href="{% url 'package' %}">Book Now</a>
         </div>
       </div>
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="caption">
           <h1>Opening sale 20% Off</h1>
-          <p>Lorem ipsum some dummy text.</p>
+          <p></p>
           <a href="{% url 'package' %}">Book Now</a>
         </div>
       </div>
@@ -24,7 +24,7 @@
       <div class="container">
         <div class="caption">
           <h1>Honeymoon Package 20% Off</h1>
-          <p>Lorem ipsum some dummy text.</p>
+          <p></p>
           <a href="{% url 'package' %}">Book Now</a>
         </div>
       </div>
