--- a/website/home/templates/home/base.html
+++ b/website/home/templates/home/base.html
@@ -694,11 +694,7 @@
               <ul>
                 <li><span class="icon icon-map-marker"></span><span class="text">New Market, M.G.Marg, Gangtok, Sikkim,
                     India
-                  </span></li>
-                <li><span class="icon icon-phone"></span><span class="text">8972733345</span></li>
-                <li><span class="icon icon-phone"></span><span class="text">7908111760</span></li>
-                <li><span class="icon icon-phone"></span><span class="text">8637390902</span></li>
-                <li><span class="icon icon-envelope"></span><span class="text">dextersharma960@gmail.com</span>
+                  </span>
                 </li>
               </ul>
             </div>
